unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Email__c.field-meta.xml
<CustomField>
    <fullName>pse__Email__c</fullName>
    <description>Email address for receiving error notifications if the Integration with Jira fails.</description>
    <inlineHelpText>Email address for receiving error notifications if the Integration with Jira fails.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>