unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Jira_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Application_URL__c</fullName>
    <description>The URL to the Jira application. Used for authentication.</description>
    <inlineHelpText>The URL to the Jira application. Used for authentication.</inlineHelpText>
    <label>Jira Application URL</label>
    <type>Url</type>
</CustomField>