unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Jira_Issue_Status_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Issue_Status_Category__c</fullName>
    <defaultValue>'Done'</defaultValue>
    <description>Category of Jira issue statuses used for updating PSA projects.</description>
    <inlineHelpText>When the Map PSA Projects to Jira Issues field is selected, determines the category of Jira issue statuses that update the mapped project field with the value defined in PSA Field Value for Updating Projects.</inlineHelpText>
    <label>Jira Issue Status Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>