unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Jira_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Issue_Type__c</fullName>
    <defaultValue>'Epic'</defaultValue>
    <description>When the Enable Syncing Projects with Jira Issues field is selected, determines the type of Jira issues PSA projects are synced with.</description>
    <inlineHelpText>When the Enable Syncing Projects with Jira Issues field is selected, determines the type of Jira issues PSA projects are synced with. This value is case-sensitive and the issue type must exist in your Jira application.</inlineHelpText>
    <label>Jira Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>