unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Jira_Welcome_Email_for_Synced_Resources__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Welcome_Email_for_Synced_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Jira Notification Email for Synced Resources</description>
    <inlineHelpText>Indicates whether PSA resources synced to Jira receive an email notification with their Jira username and a link to set their password.</inlineHelpText>
    <label>Jira Welcome Email for Synced Resources</label>
    <type>Checkbox</type>
</CustomField>