unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Map_PSA_Projects_to_Jira_Issues__c.field-meta.xml
<CustomField>
    <fullName>pse__Map_PSA_Projects_to_Jira_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, PSA projects are mapped to Jira issues, instead of to Jira projects.</description>
    <inlineHelpText>When selected, PSA projects are mapped to Jira issues, instead of to Jira projects. The type of Jira issue is determined by the value of the Jira Issue Type field.</inlineHelpText>
    <label>Map PSA Projects to Jira Issues</label>
    <type>Checkbox</type>
</CustomField>