unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Max_Resource_Days_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Max_Resource_Days_Per_Week__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of timecard days time can be logged against each week for a resource.</description>
    <inlineHelpText>Maximum number of timecard days, starting with Monday, time can be logged against each week for a resource. You can enter a whole number between 1 and 7. For example, enter 5 to enable time logging for Monday to Friday.</inlineHelpText>
    <label>Max Resource Days Per Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>