unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Parent_Issue_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Issue_Field__c</fullName>
    <defaultValue>'Parent Link'</defaultValue>
    <description>Name of the Jira custom field used to link an issue to a parent issue type.</description>
    <inlineHelpText>Name of the Jira custom field used to link an issue to a parent issue type, for example, Parent Link. The relationship can have multiple levels, but the issue type defined in Jira Issue Type is the highest one taken into account.</inlineHelpText>
    <label>Parent Issue Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>