unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__PSA_Field_Value_for_Updating_Projects__c.field-meta.xml
<CustomField>
    <fullName>pse__PSA_Field_Value_for_Updating_Projects__c</fullName>
    <defaultValue>'true'</defaultValue>
    <description>Value used to update a specified PSA project field when a Jira issue is set to a specified status.</description>
    <inlineHelpText>When the Map PSA Projects to Jira Issues field is selected, determines the value with which the mapped project field is updated when a Jira issue has the status defined in Jira Issue Status Category. This value is case-sensitive.</inlineHelpText>
    <label>PSA Field Value for Updating Projects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>