unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Retry_Project_Task_Sync_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Retry_Project_Task_Sync_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Defines the batch size used when retrying to sync PSA project tasks to Jira issues. The default value is 200.</description>
    <inlineHelpText>Defines the batch size used when retrying to sync PSA project tasks to Jira issues. The default value is 200.</inlineHelpText>
    <label>Retry Project Task Sync Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>