unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Sync_Jira_Issues_to_PSA_Project_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_Jira_Issues_to_PSA_Project_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Jira issues should be synchronized to PSA project tasks.</description>
    <inlineHelpText>Indicates whether Jira issues should be synchronized to PSA project tasks. Automatically populates when the Sync Issues from Jira to Project Tasks in PSA workflow is enabled using the Feature Console.</inlineHelpText>
    <label>Sync Jira Issues to PSA Project Tasks</label>
    <type>Checkbox</type>
</CustomField>