unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Sync_Jira_Work_Logs_to_PSA_Timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_Jira_Work_Logs_to_PSA_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Jira work logs should be synchronized to PSA timecards.</description>
    <inlineHelpText>Indicates whether Jira work logs should be synchronized to PSA timecards. Automatically populates when the Sync Work Logs from Jira to Timecards in PSA workflow is enabled using the Feature Console.</inlineHelpText>
    <label>Sync Jira Work Logs to PSA Timecards</label>
    <type>Checkbox</type>
</CustomField>