unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Sync_PSA_Project_Tasks_to_Jira_Issues__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_PSA_Project_Tasks_to_Jira_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether PSA project tasks should be synchronized to Jira issues.</description>
    <inlineHelpText>Indicates whether PSA project tasks should be synchronized to Jira issues. Automatically populates when the Sync PSA Project Tasks to Jira Issues workflow is enabled using the Feature Console.</inlineHelpText>
    <label>Sync PSA Project Tasks to Jira Issues</label>
    <type>Checkbox</type>
</CustomField>