unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Sync_PSA_Projects_to_Jira_Projects__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_PSA_Projects_to_Jira_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether PSA projects should be synchronized to Jira projects.</description>
    <inlineHelpText>Indicates whether PSA projects should be synchronized to Jira projects. Automatically populates when the Sync Projects from PSA to Projects in Jira workflow is enabled using the Feature Console.</inlineHelpText>
    <label>Sync PSA Projects to Jira Projects</label>
    <type>Checkbox</type>
</CustomField>