unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Sync_PSA_Resources_to_Jira_Users__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_PSA_Resources_to_Jira_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether PSA resources should be synchronized to Jira users.</description>
    <inlineHelpText>Indicates whether PSA resources should be synchronized to Jira users. Automatically populates when the Sync Resources from PSA to Users in Jira workflow is enabled using the Feature Console.</inlineHelpText>
    <label>Sync PSA Resources to Jira Users</label>
    <type>Checkbox</type>
</CustomField>