unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Timecard_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Status__c</fullName>
    <defaultValue>'Saved'</defaultValue>
    <description>Status in which timecards are created.</description>
    <inlineHelpText>Status in which timecards are created.</inlineHelpText>
    <label>Timecard Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>