unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Update_Task_Status_Based_On_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Task_Status_Based_On_Issue_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the status of PSA project tasks should be updated based on the status of the related Jira issues.</description>
    <inlineHelpText>Indicates whether the status of PSA project tasks should be updated based on the status of the related Jira issues.</inlineHelpText>
    <label>Update Task Status Based on Issue Status</label>
    <type>Checkbox</type>
</CustomField>