unpackaged/main/default/objects/pse__Integration_Hub_Connector_Jira_PSA__c/fields/pse__Use_PSA_as_Source_for_Project_Task_Sync__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_PSA_as_Source_for_Project_Task_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines the direction of the project task synchronization (provided that the appropriate workflow is enabled). When selected, PSA project tasks are synced to Jira issues. When deselected, Jira issues are synced to PSA project tasks.</description>
    <inlineHelpText>Determines the direction of the project task synchronization (provided that the appropriate workflow is enabled). When selected, PSA project tasks are synced to Jira issues. When deselected, Jira issues are synced to PSA project tasks.</inlineHelpText>
    <label>Use PSA as Source for Project Task Sync</label>
    <type>Checkbox</type>
</CustomField>